# provider-side-linkage-risk

./: .gitignore  LICENSE  NUL  README.md  THIRD_PARTY.md  main.py  pyproject.toml
artifacts/: README.md  dataset-manifest.json
configs/: mvp.json  open_swe_user_overlay_u3.json  open_swe_user_overlay_u4_hard_shared.json  smoke.json  tau_bench_overlay_t3.json
docs/: agent-native-linkage-upgrade-todo.md  artifact-index.md  artifact-manifest.json  attack-feasibility-data-stance.md  code-map.md  data-schema.md  dataset-card-open-swe-traces-adapted.md  dataset-card-swe-bench-lite-adapted.md  dataset-card-synthetic-a.md  dataset-card-tau-bench-adapted.md  dataset-index.md  experiment-spec.md  github-release.md  llm-agent-api-privacy-research-plan.md  mvp-results-summary.md  open-swe-traces-openhands-minimax-reservoir-100-seed7-hf-audit.md  open-swe-traces-openhands-minimax-reservoir-100-seed7-hf-turn-delta-3-6-9-12-audit.md  open-swe-traces-openhands-minimax-reservoir-250-seed7-hf-audit.md  open-swe-traces-openhands-minimax-reservoir-250-seed7-hf-turn-delta-3-6-9-12-audit.md  open-swe-traces-openhands-minimax-reservoir-250-seed7-local-audit.md  open-swe-traces-openhands-minimax-reservoir-250-seed7-local-turn-delta-3-6-9-12-audit.md  open-swe-traces-openhands-minimax-reservoir-500-seed7-hf-audit.md  open-swe-traces-openhands-minimax-reservoir-500-seed7-hf-turn-delta-3-6-9-12-audit.md  open-swe-traces-openhands-qwen35-raw-500-audit.md  open-swe-traces-openhands-qwen35-raw-500-turn-delta-3-6-9-12-audit.md  open-swe-traces-raw-1000-audit.md  open-swe-traces-raw-audit.md  (+22 more)
(+304 files in other folders)
